Causeview Package Complete/ant script/retrieveUnpackaged/objects/Promotion_Code__c.object
<CustomObject>
    <description>Causeview - promotion codes applied to event ticketing</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apply_To__c</fullName>
        <description>Define how promotion should be applied</description>
        <inlineHelpText>Define how promotion should be applied: to specified levels or the entire purchase</inlineHelpText>
        <label>Apply To</label>
        <picklist>
            <picklistValues>
                <fullName>Each Ticket per Event Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entire Purchase</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <description>Promotion Code</description>
        <externalId>true</externalId>
        <inlineHelpText>e.g. VIP10 (Do not use spaces or special characters)</inlineHelpText>
        <label>Code</label>
        <length>48</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of promotion</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discount_Type__c</fullName>
        <description>Defines the type of discount to apply to the promotion code</description>
        <inlineHelpText>Defines the type of discount to apply to the promotion code</inlineHelpText>
        <label>Discount Type</label>
        <picklist>
            <picklistValues>
                <fullName>Percentage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Ticket Price</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discounted_Price__c</fullName>
        <description>Price of event level after discount</description>
        <formula>IF( ISPICKVAL(Apply_To__c, &quot;Event Level&quot;), IF(ISPICKVAL(Discount_Type__c, &quot;Percentage&quot;), ( Event_Level__r.Level_Price__c *  Percentage__c ),  Fixed_Price__c ), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Price of event level after discount</inlineHelpText>
        <label>Discounted Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Promo valid end date</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Event Level the discount will be applied to</description>
        <inlineHelpText>Event Level the discount will be applied to</inlineHelpText>
        <label>Event Level</label>
        <referenceTo>Event_Level__c</referenceTo>
        <relationshipLabel>Promotion Codes</relationshipLabel>
        <relationshipName>Promotion_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <description>Event related to promotion</description>
        <label>Event</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Promotion Codes</relationshipLabel>
        <relationshipName>Promotion_Codes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Fixed_Price__c</fullName>
        <description>Defines the fixed price per ticket or purchase</description>
        <inlineHelpText>Defines the fixed price per ticket or purchase</inlineHelpText>
        <label>Fixed Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Limited_Time_Promotion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check to define period promotion is valid</description>
        <inlineHelpText>Check to define period promotion is valid</inlineHelpText>
        <label>Limited Time Promotion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Usage__c</fullName>
        <description>Number of times the promotion code can be used</description>
        <inlineHelpText>Number of times the promotion code can be used</inlineHelpText>
        <label>Max Usage</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percentage__c</fullName>
        <description>Percentage discount to be applied</description>
        <label>Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Promo valid start date</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Promotion Code</label>
    <nameField>
        <displayFormat>Promo-{000000}</displayFormat>
        <label>Promo Code No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotion Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>EventLevelDiscount</fullName>
        <active>true</active>
        <description>Confirms event level is selected when Apply To is set to Event Level</description>
        <errorConditionFormula>AND( Event_Level__c = null, (ISPICKVAL(Apply_To__c,&quot;Each Ticket per Event Level&quot;)))</errorConditionFormula>
        <errorDisplayField>Event_Level__c</errorDisplayField>
        <errorMessage>You must select an Event Level if Apply To is set to Event Level</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FixedPriceRequired</fullName>
        <active>true</active>
        <description>Requires Fixed Price field be populated if Fixed Price is selected.</description>
        <errorConditionFormula>AND(ISPICKVAL( Discount_Type__c, &quot;Fixed Price&quot;), ISBLANK( Fixed_Price__c ))</errorConditionFormula>
        <errorDisplayField>Fixed_Price__c</errorDisplayField>
        <errorMessage>You must input a Fixed Price</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NoSpaces</fullName>
        <active>true</active>
        <description>Validates promo code does not contain spaces</description>
        <errorConditionFormula>CONTAINS(Code__c, &quot; &quot;)</errorConditionFormula>
        <errorDisplayField>Code__c</errorDisplayField>
        <errorMessage>Promotion codes cannot contain spaces</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NonEventLevelDiscount</fullName>
        <active>true</active>
        <description>Confirms event level is NOT selected when Apply To is set to Entire Purchase</description>
        <errorConditionFormula>AND( NOT(ISBLANK(Event_Level__c )), ( ISPICKVAL(Apply_To__c,&quot;Entire Purchase&quot;)))</errorConditionFormula>
        <errorDisplayField>Event_Level__c</errorDisplayField>
        <errorMessage>You should not select an Event Level if Apply To is set to Entire Purchase.  Event Level should only be selected if Apply To is set to Event Level.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PercentOrFixed</fullName>
        <active>true</active>
        <description>Ensures only Percentage OR Fixed Price is entered, not both.</description>
        <errorConditionFormula>AND(NOT(ISBLANK( Fixed_Price__c)), NOT(ISBLANK( Percentage__c )))</errorConditionFormula>
        <errorMessage>You cannot enter both a Percentage and Fixed Price discount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PercentageRequired</fullName>
        <active>true</active>
        <description>Requires Percentage field be populated if Percentage is selected.</description>
        <errorConditionFormula>AND(ISPICKVAL( Discount_Type__c, &quot;Percentage&quot;), ISBLANK(  Percentage__c  ))</errorConditionFormula>
        <errorDisplayField>Percentage__c</errorDisplayField>
        <errorMessage>You must input a Percentage</errorMessage>
    </validationRules>
</CustomObject>